--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,7 +2,7 @@ sensor:
   - platform: command_line
     name: divera_vehicle
     command:  curl -X GET https://www.divera247.com/api/v2/pull/vehicle-status?accesskey=YOUR-ACCESS-KEY-HERE-0123456789-abcdefghijklmnopqrstuvwxyz
-    scan_interval: 6000
+    scan_interval: 300
     json_attributes:
       - data
     value_template: '{{ value_json["success"] }}'
@@ -13,21 +13,9 @@ sensor:
         entity_id: sensor.divera_vehicle
         friendly_name_template: "{{ state_attr('sensor.divera_vehicle', 'data')[0]['shortname'] }}"
         value_template: >-
-          {% if state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 1 %}
-            funkfrei
-          {% elif state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 2 %}
-            auf Wache
-          {% elif state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 3 %}
-            Einsatz übernommen
-          {% elif state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 4 %}
-            Einsatzstelle an
-          {% elif state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 5 %}
-            Sprechwunsch
-          {% elif state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] == 6 %}
-            nicht einsatzbereit
-          {% else %}
-            undefiniert
-          {% endif %}
+          {% set values = [ 'funkfrei', 'auf Wache', 'Einsatz übernommen', 'Einsatzstelle an', 'Sprechwunsch', 'nicht einsatzbereit' ] %}
+          {% set status = state_attr('sensor.divera_vehicle', 'data')[0]['fmsstatus'] | int - 1 %}
+          {{ values[status] if status in range(values | length) else 'unknown' }}
         attribute_templates:
           id: "{{ state_attr('sensor.divera_vehicle', 'data')[0]['id'] }}"
           FuRn: "{{ state_attr('sensor.divera_vehicle', 'data')[0]['name'] }}"
@@ -39,21 +27,9 @@ sensor:
         entity_id: sensor.divera_vehicle
         friendly_name_template: "{{ state_attr('sensor.divera_vehicle', 'data')[1]['shortname'] }}"
         value_template: >-
-          {% if state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 1 %}
-            funkfrei
-          {% elif state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 2 %}
-            auf Wache
-          {% elif state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 3 %}
-            Einsatz übernommen
-          {% elif state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 4 %}
-            Einsatzstelle an
-          {% elif state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 5 %}
-            Sprechwunsch
-          {% elif state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] == 6 %}
-            nicht einsatzbereit
-          {% else %}
-            undefiniert
-          {% endif %}
+          {% set values = [ 'funkfrei', 'auf Wache', 'Einsatz übernommen', 'Einsatzstelle an', 'Sprechwunsch', 'nicht einsatzbereit' ] %}
+          {% set status = state_attr('sensor.divera_vehicle', 'data')[1]['fmsstatus'] | int - 1 %}
+          {{ values[status] if status in range(values | length) else 'unknown' }}
         attribute_templates:
           id: "{{ state_attr('sensor.divera_vehicle', 'data')[1]['id'] }}"
           FuRn: "{{ state_attr('sensor.divera_vehicle', 'data')[1]['name'] }}"
@@ -65,21 +41,9 @@ sensor:
         entity_id: sensor.divera_vehicle
         friendly_name_template: "{{ state_attr('sensor.divera_vehicle', 'data')[2]['shortname'] }}"
         value_template: >-
-          {% if state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 1 %}
-            funkfrei
-          {% elif state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 2 %}
-            auf Wache
-          {% elif state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 3 %}
-            Einsatz übernommen
-          {% elif state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 4 %}
-            Einsatzstelle an
-          {% elif state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 5 %}
-            Sprechwunsch
-          {% elif state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] == 6 %}
-            nicht einsatzbereit
-          {% else %}
-            undefiniert
-          {% endif %}
+          {% set values = [ 'funkfrei', 'auf Wache', 'Einsatz übernommen', 'Einsatzstelle an', 'Sprechwunsch', 'nicht einsatzbereit' ] %}
+          {% set status = state_attr('sensor.divera_vehicle', 'data')[2]['fmsstatus'] | int - 1 %}
+          {{ values[status] if status in range(values | length) else 'unknown' }}
         attribute_templates:
           id: "{{ state_attr('sensor.divera_vehicle', 'data')[2]['id'] }}"
           FuRn: "{{ state_attr('sensor.divera_vehicle', 'data')[2]['name'] }}"
